examples/test/testpolicy13756.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13756
  namespace: namespace453
spec:
  podSelector:
    matchLabels:
      key48: value14
      key17: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value23
          key45: value4
          key25: value45
      podSelector:
        matchLabels:
          key29: value30
          key21: value10
